; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page6.c_enableArea.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page6.c_enableArea.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@area = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @enableArea to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enableArea(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* @area, align 4
  %9 = call i32 @uiControl(i32 %8)
  %10 = call i32 @uiControlEnable(i32 %9)
  br label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @area, align 4
  %13 = call i32 @uiControl(i32 %12)
  %14 = call i32 @uiControlDisable(i32 %13)
  br label %15

15:                                               ; preds = %11, %7
  ret void
}

declare dso_local i32 @uiControlEnable(i32) #1

declare dso_local i32 @uiControl(i32) #1

declare dso_local i32 @uiControlDisable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
